--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Sudoku</title>
     </head>
     <body>
-        <div id="app" class="container"></div>
+        <div id="app"></div>
         <script type="module" src="./index.js"></script>
     </body>
 </html>
