--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Sudoku</title>
     </head>
     <body>
-        <div id="app" />
-        <script type="module" src="./index.js" />
+        <div id="app"></div>
+        <script type="module" src="./index.jsx"></script>
     </body>
 </html>
